# v8

./: .clang-format  .gitignore  BUILD.gn  CMakeLists.txt
cheri/: cheri-compressed.gn  cheri-uncompressed.gn  flat-compressed.gn  flat-uncompressed.gn
include/: v8-fast-api-calls.h  v8-internal.h  v8-platform.h
include/cppgc/: macros.h
include/cppgc/internal/: caged-heap.h  member-storage.h
include/libplatform/: v8-tracing.h
src/api/: api.cc
src/ast/: scopes.cc
src/base/: address-region.h  atomic-utils.h  atomicops.h  bit-field.h  bits.h  bounded-page-allocator.cc  functional.h  logging.cc  logging.h  macros.h  memory.h  page-allocator.cc  pointer-with-payload.h  virtual-address-space-page-allocator.cc  virtual-address-space.cc
src/base/platform/: platform-freebsd.cc  platform-posix.cc  platform.h
src/baseline/arm64/: baseline-assembler-arm64-inl.h
src/bigint/: digit-arithmetic.h
src/builtins/: builtins-shared-array.cc  builtins-string-gen.cc  builtins-trace.cc  builtins.h  setup-builtins-internal.cc
src/builtins/arm64/: builtins-arm64.cc
src/codegen/: bailout-reason.h  code-stub-assembler.cc  code-stub-assembler.h  constant-pool.cc  constant-pool.h  external-reference-table.h  machine-type.cc  machine-type.h  macro-assembler-base.cc  macro-assembler-base.h  reloc-info.h
src/codegen/arm/: assembler-arm.cc
src/codegen/arm64/: assembler-arm64-inl.h  assembler-arm64.cc  assembler-arm64.h  constants-arm64.h  cpu-arm64.cc  decoder-arm64-inl.h  decoder-arm64.h  instructions-arm64.cc  instructions-arm64.h  interface-descriptors-arm64-inl.h  macro-assembler-arm64-inl.h  macro-assembler-arm64.cc  macro-assembler-arm64.h  register-arm64.h
src/common/: cheri.h  globals.h  ptr-compr-inl.h
src/compiler/: basic-block-instrumentor.cc  c-linkage.cc  code-assembler.cc  code-assembler.h  common-node-cache.h  common-operator.cc  common-operator.h  effect-control-linearizer.cc  graph-assembler.cc  load-elimination.cc  machine-graph-verifier.cc  machine-graph.cc  machine-graph.h  machine-operator.cc  machine-operator.h  memory-lowering.cc  node-cache.h  opcodes.h  operator-properties.cc  raw-machine-assembler.cc  raw-machine-assembler.h  representation-change.cc  simplified-lowering-verifier.cc  typer.cc  types.h  verifier.cc
src/compiler/backend/: code-generator-impl.h  code-generator.cc  code-generator.h  instruction-selector-impl.h  instruction-selector.cc  instruction-selector.h  instruction.cc  instruction.h  register-allocation.h
src/compiler/backend/arm64/: code-generator-arm64.cc  instruction-codes-arm64.h  (+2 more)
src/compiler/turboshaft/: assembler.h  fast-api-call-reducer.h  graph-builder.cc  index.h  operations.h  recreate-schedule.cc  representations.h
src/d8/: d8-posix.cc  d8.cc
src/diagnostics/: gdb-jit.cc  objects-debug.cc
src/diagnostics/arm64/: disasm-arm64.cc
src/execution/: frames.cc  isolate-data.h  isolate.cc  simulator.h  stack-guard.cc  stack-guard.h
src/execution/arm64/: frame-constants-arm64.cc  pointer-authentication-arm64.h
src/flags/: flags.cc
src/handles/: handles.h
src/heap/: allocation-observer.h  allocation-result.h  basic-memory-chunk.h  code-range.cc  factory-base.cc  factory-base.h  factory.cc  free-list.cc  heap-allocator-inl.h  heap-controller.h  heap-write-barrier-inl.h  heap.cc  heap.h  large-spaces.h  mark-compact.cc  marking-inl.h  marking.h  memory-allocator.cc  memory-allocator.h  memory-chunk-layout.cc  memory-chunk-layout.h  memory-chunk.cc  memory-chunk.h  paged-spaces-inl.h  paged-spaces.cc  read-only-heap.cc  read-only-spaces.cc  read-only-spaces.h  setup-heap-internal.cc  slot-set.h  spaces-inl.h  spaces.h
src/heap/base/: basic-slot-set.h  stack.cc
src/heap/cppgc/: gc-info-table.cc  globals.h  heap-object-header.h  object-start-bitmap.h  page-memory.cc  visitor.cc
src/init/: v8.cc
src/json/: json-parser.cc
src/libplatform/tracing/: trace-object.cc  tracing-controller.cc
src/maglev/: maglev-regalloc-data.h
src/numbers/: integer-literal.h
src/objects/: api-callbacks.tq  backing-store.cc  bigint.h  code-inl.h  code.cc  code.h  embedder-data-slot-inl.h  fixed-array.h  free-space-inl.h  hash-table.h  heap-object.h  hole.h  instruction-stream.cc  instruction-stream.h  js-array-buffer-inl.h  js-array.h  js-temporal-objects.cc  maybe-object-inl.h  object-type.cc  objects-body-descriptors-inl.h  objects-inl.h  objects.h  oddball.h  shared-function-info.tq  simd.cc  string-forwarding-table-inl.h  string.cc  string.h  swiss-name-dictionary-inl.h  tagged-impl.h
src/profiler/: strings-storage.cc  tick-sample.cc
src/runtime/: runtime-test.cc
src/sandbox/: external-entity-table-inl.h  external-pointer-table-inl.h  external-pointer-table.h  sandbox.cc  sandboxed-pointer-inl.h
src/snapshot/: deserializer.cc  serializer.cc  snapshot-source-sink.cc  snapshot-source-sink.h
src/snapshot/embedded/: embedded-data-inl.h  embedded-data.cc  embedded-file-writer.cc  platform-embedded-file-writer-aix.cc  platform-embedded-file-writer-base.cc  platform-embedded-file-writer-generic.cc  platform-embedded-file-writer-mac.cc  platform-embedded-file-writer-win.cc
src/strings/: unicode-decoder.h
src/torque/: earley-parser.cc  implementation-visitor.cc  implementation-visitor.h  instructions.h  runtime-macro-shims.h  torque-parser.cc  type-oracle.h  type-visitor.cc
src/tracing/: trace-event.h
src/utils/: allocation.cc  allocation.h  bit-vector.h  sparse-bit-vector.h
src/wasm/: wasm-code-manager.cc
src/wasm/baseline/: liftoff-assembler.h
src/zone/: accounting-allocator.cc  zone.h
test/cctest/: cctest-utils.h  test-allocation.cc  test-assembler-arm64.cc  test-trace-event.cc  test-utils-arm64.cc  test-utils-arm64.h
test/cctest/heap/: test-spaces.cc
test/unittests/: test-utils.h
test/unittests/base/: atomic-utils-unittest.cc  virtual-address-space-unittest.cc
test/unittests/execution/: pointer-auth-arm64-unittest.cc
test/unittests/heap/: bitmap-unittest.cc  shared-heap-unittest.cc  unmapper-unittest.cc
test/unittests/sandbox/: sandbox-unittest.cc
test/unittests/utils/: allocation-unittest.cc
(+5 files in other folders)
